# picosdk-malloc-rust-rp2040

./: .appveyor.yml  .codecov.sh  .gitignore  Cargo.toml  README.md
src/: heap.rs  heapref.rs  lib.rs  trace.rs
tests/: _heap.rs  _heapref.rs  tests.rs
